# 10_2_pytest

./: pyproject.toml
src/: main.py
tests/: conftest.py  test_calculate.py
